dark mode fix + add profile in nav

--- a/www/assets/css/components/_button.scss
+++ b/www/assets/css/components/_button.scss
@@ -36,7 +36,7 @@
 	&-outline {
 		--button-bg-color: transparent;
 		--button-bg-hover-color: rgba(255, 255, 255, 0.4);
-		--text-hover-color: var(--red);
+		--text-hover-color: var(--white);
 		border: solid thin currentColor;
 	}
 	
