--- a/www/assets/css/styles/styleAdmin.scss
+++ b/www/assets/css/styles/styleAdmin.scss
@@ -8,7 +8,7 @@
   top: 0;
   width: 230px;
   height: 100%;
-  background-color: #F7F7F7;
+  background-color: var(--summary-color);
   padding: 20px;
 
   ul {
@@ -28,6 +28,7 @@
     padding: 10px;
     color: black;
     text-decoration: none;
+    color: var(--text-color);
 
     &.active, &:hover {
       border: 2px solid black;
@@ -110,31 +111,6 @@ button {
   gap: 20px;
 }
 
-.viewPage {
-  background-color: white;
-  border-radius: 8px;
-  width: 300px;
-  padding-bottom: 30px;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 400;
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease-in-out;
-
-  &:hover {
-    transform: translateY(-8px);
-    transition: transform 0.3s ease-in-out;
-  }
-
-  h3 {
-    text-align: center;
-  }
-
-  hr {
-    color: #E3E3E3;
-    width: 80%;
-  }
-}
-
 .iconPage {
   font-size: 150px;
   color: #045a7c;
@@ -156,54 +132,6 @@ button {
 
 }
 
-.viewProductAdmin {
-  background-color: white;
-  border-radius: 12px;
-  width: 350px;
-  padding-bottom: 30px;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 400;
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease-in-out;
-
-  &:hover {
-    transform: translateY(-8px);
-    transition: transform 0.3s ease-in-out;
-  }
-
-  h3 {
-    text-align: center;
-    font-size: 1.25rem;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 800;
-  }
-
-  hr {
-    color: #E3E3E3;
-    width: 80%;
-  }
-
-  img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 12px 12px 0px 0px;
-  }
-
-  p {
-    margin: 10px;
-    color: #2F567E;
-  }
-}
-
-
-
-.priceAdmin {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 800;
-  text-align: center;
-  font-size: 1.25rem;
-}
 
 .modal-admin_products {
   display: none; 
@@ -214,12 +142,11 @@ button {
   width: 100%; 
   height: 100%; 
   overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
+  background-color: rgba(0,0,0,0.4);
 }
 
 .modal-content-admin_products {
-  background-color: #fefefe;
+  background-color: var(--whitebg);
   margin: 10% auto; 
   padding: 20px;
   border: 1px solid #888;
