--- a/www/assets/css/styles/styleHome.scss
+++ b/www/assets/css/styles/styleHome.scss
@@ -18,11 +18,21 @@ body.home-body {
   flex-direction: column;
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .title-home {
   color: var(--title-color);
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 4rem;
+  animation: fadeIn 2s;
 }
 
 .subtitle-home {
@@ -30,6 +40,7 @@ body.home-body {
   font-family: 'Raleway', sans-serif;
   font-size: 1.50rem;
   text-align: center;
+  animation: fadeIn 2s;
 }
 
 .center-home {
@@ -122,4 +133,10 @@ footer.footer-home {
   a {
     margin: 10px;
   }
+}
+
+#toggle-dark-mode {
+  background: none;
+  border: none;
+  color: inherit;
 }
